--- a/Resources/views/Config/config.html.twig
+++ b/Resources/views/Config/config.html.twig
@@ -47,7 +47,7 @@
         </fieldset>
 
         <div class="form-group">
-            <div class="col-sm-offset-3 col-sm-9">
+            <div class="col-md-9 offset-md-3">
                 {{ form_widget(form.save) }}
                 {{ form_widget(form.cancel) }}
             </div>
