--- a/Resources/views/Include/acceptPolicies.html.twig
+++ b/Resources/views/Include/acceptPolicies.html.twig
@@ -1,4 +1,4 @@
-<div class="col-sm-offset-3 col-sm-9">
+<div class="col-md-9 offset-md-3">
     <p id="acceptpolicies_policies_info">{{ __('Please click on the following links to read the corresponding documents.', 'zikulalegalmodule') }}</p>
     <ul>
     {% if activePolicies.termsOfUse|default and not acceptedPolicies.termsOfUse|default %}
@@ -42,8 +42,8 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
+                <h5 class="modal-title" id="modal-policy-title"></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="modal-policy-title"></h4>
             </div>
             <div class="modal-body" id="modal-policy-body"><i class="fa fa-spin fa-cog fa-2x"></i></div>
             <div class="modal-footer">
