--- a/Resources/views/User/acceptPolicies.html.twig
+++ b/Resources/views/User/acceptPolicies.html.twig
@@ -16,7 +16,7 @@
     </div>
 {% endif %}
 
-<form id="legal_user_acceptpolicies" class="form-horizontal" action="{{ path('zikulalegalmodule_user_acceptpolicies') }}" method="post">
+<form id="legal_user_acceptpolicies" action="{{ path('zikulalegalmodule_user_acceptpolicies') }}" method="post">
     <div>
         {{ form_start(form) }}
         {{ form_errors(form) }}
@@ -24,7 +24,7 @@
             {{ form_row(form.acceptedpolicies_policies) }}
             {{ include('@ZikulaLegalModule/Include/acceptPolicies.html.twig') }}
         </fieldset>
-        <div class="col-sm-offset-3 col-sm-9">
+        <div class="col-md-9 offset-md-3">
             {{ form_widget(form.submit) }}
             <a class="btn btn-danger" href="{{ path('home') }}" title="{{ __('Cancel') }}">{{ __('Cancel and logout') }}</a>
         </div>
