--- a/Resources/views/UsersUI/edit.html.twig
+++ b/Resources/views/UsersUI/edit.html.twig
@@ -11,16 +11,16 @@
         {% set policyName = __('Terms of use') %}
         {% set policyLink = '<a class="policy-link" data-toggle="modal" data-target="#modal-terms-of-use" href="' ~ policyUrl ~ '">' ~ policyName ~ '</a>' %}
         <div class="form-group{% if fieldErrors.termsofuse|default %} has-error{% endif %}">
-            <label class="col-sm-3 control-label required">{{ policyName }}</label>
-            <div class="col-sm-9">
+            <label class="col-md-3 col-form-label required">{{ policyName }}</label>
+            <div class="col-md-9">
             {% if editablePolicies.termsOfUse %}
-                <div class="radio">
-                    <input type="radio" id="acceptpolicies_termsofuse_yes" name="acceptedpolicies_termsofuse" required="required"{% if acceptedPolicies.termsOfUse %} checked="checked"{% endif %} value="1" />
-                    <label for="acceptpolicies_termsofuse_yes">{{ __f('%s accepted.', { '%s': policyLink })|safeHtml }}</label>
+                <div class="custom-control custom-radio">
+                    <input type="radio" id="acceptpolicies_termsofuse_yes" name="acceptedpolicies_termsofuse" required="required"{% if acceptedPolicies.termsOfUse %} checked="checked"{% endif %} value="1" class="custom-control-input" />
+                    <label class="custom-control-label" for="acceptpolicies_termsofuse_yes">{{ __f('%s accepted.', { '%s': policyLink })|safeHtml }}</label>
                 </div>
-                <div class="radio">
-                    <input type="radio" id="acceptpolicies_termsofuse_no" name="acceptedpolicies_termsofuse" required="required"{% if not acceptedPolicies.termsOfUse %} checked="checked"{% endif %} value="0" />
-                    <label for="acceptpolicies_termsofuse_no">{{ __('Policy not accepted.') }}</label>
+                <div class="custom-control custom-radio">
+                    <input type="radio" id="acceptpolicies_termsofuse_no" name="acceptedpolicies_termsofuse" required="required"{% if not acceptedPolicies.termsOfUse %} checked="checked"{% endif %} value="0" class="custom-control-input" />
+                    <label class="custom-control-label" for="acceptpolicies_termsofuse_no">{{ __('Policy not accepted.') }}</label>
                 </div>
                 <p id="acceptpolicies_termsofuse_error" class="alert alert-danger{% if not fieldErrors.termsofuse|default %} hidden{% endif %}">
                     {{ fieldErrors.termsofuse|default }}
@@ -39,16 +39,16 @@
         {% set policyName = __('Privacy policy') %}
         {% set policyLink = '<a class="policy-link" data-toggle="modal" data-target="#modal-privacy-policy" href="' ~ policyUrl ~ '">' ~ policyName ~ '</a>' %}
         <div class="form-group{% if fieldErrors.privacypolicy|default %} has-error{% endif %}">
-            <label class="col-sm-3 control-label required">{{ policyName }}</label>
-            <div class="col-sm-9">
+            <label class="col-md-3 col-form-label required">{{ policyName }}</label>
+            <div class="col-md-9">
             {% if editablePolicies.privacyPolicy %}
-                <div class="radio">
-                    <input type="radio" id="acceptpolicies_privacypolicy_yes" name="acceptedpolicies_privacypolicy" required="required"{% if acceptedPolicies.privacyPolicy %} checked="checked"{% endif %} value="1" />
-                    <label for="acceptpolicies_privacypolicy_yes">{{ __f('%s accepted.', { '%s': policyLink })|safeHtml }}</label>
+                <div class="custom-control custom-radio">
+                    <input type="radio" id="acceptpolicies_privacypolicy_yes" name="acceptedpolicies_privacypolicy" required="required"{% if acceptedPolicies.privacyPolicy %} checked="checked"{% endif %} value="1" class="custom-control-input" />
+                    <label class="custom-control-label" for="acceptpolicies_privacypolicy_yes">{{ __f('%s accepted.', { '%s': policyLink })|safeHtml }}</label>
                 </div>
-                <div class="radio">
-                    <input type="radio" id="acceptpolicies_privacypolicy_no" name="acceptedpolicies_privacypolicy" required="required"{% if not acceptedPolicies.privacyPolicy %} checked="checked"{% endif %} value="0" />
-                    <label for="acceptpolicies_privacypolicy_no">{{ __('Policy not accepted.') }}</label>
+                <div class="custom-control custom-radio">
+                    <input type="radio" id="acceptpolicies_privacypolicy_no" name="acceptedpolicies_privacypolicy" required="required"{% if not acceptedPolicies.privacyPolicy %} checked="checked"{% endif %} value="0" class="custom-control-input" />
+                    <label class="custom-control-label" for="acceptpolicies_privacypolicy_no">{{ __('Policy not accepted.') }}</label>
                 </div>
                 <p id="acceptpolicies_privacypolicy_error" class="alert alert-danger{% if not fieldErrors.privacypolicy|default %} hidden{% endif %}">
                     {{ fieldErrors.privacypolicy|default }}
@@ -61,16 +61,16 @@
     {% endif %}
     {% if activePolicies.agePolicy and viewablePolicies.agePolicy %}
         <div class="form-group{% if fieldErrors.agepolicy|default %} has-error{% endif %}">
-            <label class="col-sm-3 control-label required">{{ __('Minimum age') }}</label>
-            <div class="col-sm-9">
+            <label class="col-md-3 col-form-label required">{{ __('Minimum age') }}</label>
+            <div class="col-md-9">
             {% if editablePolicies.agePolicy %}
-                <div class="radio">
-                    <input type="radio" id="acceptpolicies_agepolicy_yes" name="acceptedpolicies_agepolicy" required="required"{% if acceptedPolicies.agePolicy %} checked="checked"{% endif %} value="1" />
-                    <label for="acceptpolicies_agepolicy_yes">{{ __f('Confirmed minimum age requirement (%s years of age) met.', { '%s': getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_MINIMUM_AGE'), 13) }) }}</label>
+                <div class="custom-control custom-radio">
+                    <input type="radio" id="acceptpolicies_agepolicy_yes" name="acceptedpolicies_agepolicy" required="required"{% if acceptedPolicies.agePolicy %} checked="checked"{% endif %} value="1" class="custom-control-input" />
+                    <label class="custom-control-label" for="acceptpolicies_agepolicy_yes">{{ __f('Confirmed minimum age requirement (%s years of age) met.', { '%s': getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_MINIMUM_AGE'), 13) }) }}</label>
                 </div>
-                <div class="radio">
-                    <input type="radio" id="acceptpolicies_agepolicy_no" name="acceptedpolicies_agepolicy" required="required"{% if not acceptedPolicies.agePolicy %} checked="checked"{% endif %} value="0" />
-                    <label for="acceptpolicies_agepolicy_no">{{ __('Minimum age requirement not confirmed.') }}</label>
+                <div class="custom-control custom-radio">
+                    <input type="radio" id="acceptpolicies_agepolicy_no" name="acceptedpolicies_agepolicy" required="required"{% if not acceptedPolicies.agePolicy %} checked="checked"{% endif %} value="0" class="custom-control-input" />
+                    <label class="custom-control-label" for="acceptpolicies_agepolicy_no">{{ __('Minimum age requirement not confirmed.') }}</label>
                 </div>
                 <p id="acceptpolicies_agepolicy_error" class="alert alert-danger{% if not fieldErrors.agepolicy|default %} hidden{% endif %}">
                     {{ fieldErrors.agepolicy|default }}
@@ -89,16 +89,16 @@
         {% set policyName = __('General terms and conditions of trade') %}
         {% set policyLink = '<a class="policy-link" data-toggle="modal" data-target="#modal-general-terms-and-conditions-of-trade" href="' ~ policyUrl ~ '">' ~ policyName ~ '</a>' %}
         <div class="form-group{% if fieldErrors.tradeconditions|default %} has-error{% endif %}">
-            <label class="col-sm-3 control-label required">{{ policyName }}</label>
-            <div class="col-sm-9">
+            <label class="col-md-3 col-form-label required">{{ policyName }}</label>
+            <div class="col-md-9">
             {% if editablePolicies.tradeConditions %}
-                <div class="radio">
-                    <input type="radio" id="acceptpolicies_tradeconditions_yes" name="acceptedpolicies_tradeconditions" required="required"{% if acceptedPolicies.tradeConditions %} checked="checked"{% endif %} value="1" />
-                    <label for="acceptpolicies_tradeconditions_yes">{{ __f('%s accepted.', { '%s': policyLink })|safeHtml }}</label>
+                <div class="custom-control custom-radio">
+                    <input type="radio" id="acceptpolicies_tradeconditions_yes" name="acceptedpolicies_tradeconditions" required="required"{% if acceptedPolicies.tradeConditions %} checked="checked"{% endif %} value="1" class="custom-control-input" />
+                    <label class="custom-control-label" for="acceptpolicies_tradeconditions_yes">{{ __f('%s accepted.', { '%s': policyLink })|safeHtml }}</label>
                 </div>
-                <div class="radio">
-                    <input type="radio" id="acceptpolicies_tradeconditions_no" name="acceptedpolicies_tradeconditions" required="required"{% if not acceptedPolicies.tradeConditions %} checked="checked"{% endif %} value="0" />
-                    <label for="acceptpolicies_tradeconditions_no">{{ __('Policy not accepted.') }}</label>
+                <div class="custom-control custom-radio">
+                    <input type="radio" id="acceptpolicies_tradeconditions_no" name="acceptedpolicies_tradeconditions" required="required"{% if not acceptedPolicies.tradeConditions %} checked="checked"{% endif %} value="0" class="custom-control-input" />
+                    <label class="custom-control-label" for="acceptpolicies_tradeconditions_no">{{ __('Policy not accepted.') }}</label>
                 </div>
                 <p id="acceptpolicies_tradeconditions_error" class="alert alert-danger{% if not fieldErrors.tradeconditions|default %} hidden{% endif %}">
                     {{ fieldErrors.tradeconditions|default }}
@@ -117,16 +117,16 @@
         {% set policyName = __('Cancellation right policy') %}
         {% set policyLink = '<a class="policy-link" data-toggle="modal" data-target="#modal-cancellation-right-policy" href="' ~ policyUrl ~ '">' ~ policyName ~ '</a>' %}
         <div class="form-group{% if fieldErrors.cancellationrightpolicy|default %} has-error{% endif %}">
-            <label class="col-sm-3 control-label required">{{ policyName }}</label>
-            <div class="col-sm-9">
+            <label class="col-md-3 col-form-label required">{{ policyName }}</label>
+            <div class="col-md-9">
             {% if editablePolicies.cancellationRightPolicy %}
-                <div class="radio">
-                    <input type="radio" id="acceptpolicies_cancellationrightpolicy_yes" name="acceptedpolicies_cancellationrightpolicy" required="required"{% if acceptedPolicies.cancellationRightPolicy %} checked="checked"{% endif %} value="1" />
-                    <label for="acceptpolicies_cancellationrightpolicy_yes">{{ __f('%s accepted.', { '%s': policyLink })|safeHtml }}</label>
+                <div class="custom-control custom-radio">
+                    <input type="radio" id="acceptpolicies_cancellationrightpolicy_yes" name="acceptedpolicies_cancellationrightpolicy" required="required"{% if acceptedPolicies.cancellationRightPolicy %} checked="checked"{% endif %} value="1" class="custom-control-input" />
+                    <label class="custom-control-label" for="acceptpolicies_cancellationrightpolicy_yes">{{ __f('%s accepted.', { '%s': policyLink })|safeHtml }}</label>
                 </div>
-                <div class="radio">
-                    <input type="radio" id="acceptpolicies_cancellationrightpolicy_no" name="acceptedpolicies_cancellationrightpolicy" required="required"{% if not acceptedPolicies.cancellationRightPolicy %} checked="checked"{% endif %} value="0" />
-                    <label for="acceptpolicies_cancellationrightpolicy_no">{{ __('Policy not accepted.') }}</label>
+                <div class="custom-control custom-radio">
+                    <input type="radio" id="acceptpolicies_cancellationrightpolicy_no" name="acceptedpolicies_cancellationrightpolicy" required="required"{% if not acceptedPolicies.cancellationRightPolicy %} checked="checked"{% endif %} value="0" class="custom-control-input" />
+                    <label class="custom-control-label" for="acceptpolicies_cancellationrightpolicy_no">{{ __('Policy not accepted.') }}</label>
                 </div>
                 <p id="acceptpolicies_cancellationrightpolicy_error" class="alert alert-danger{% if not fieldErrors.cancellationrightpolicy|default %} hidden{% endif %}">
                     {{ fieldErrors.cancellationrightpolicy|default }}
@@ -143,8 +143,8 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
+                <h5 class="modal-title" id="modal-policy-title"></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="modal-policy-title"></h4>
             </div>
             <div class="modal-body" id="modal-policy-body"><i class="fa fa-spin fa-cog fa-2x"></i></div>
             <div class="modal-footer">
