--- a/Resources/views/User/acceptPolicies.html.twig
+++ b/Resources/views/User/acceptPolicies.html.twig
@@ -24,9 +24,11 @@
             {{ form_row(form.acceptedpolicies_policies) }}
             {{ include('@ZikulaLegalModule/Include/acceptPolicies.html.twig') }}
         </fieldset>
-        <div class="col-md-9 offset-md-3">
-            {{ form_widget(form.submit) }}
-            <a class="btn btn-danger" href="{{ path('home') }}" title="{{ __('Cancel') }}">{{ __('Cancel and logout') }}</a>
+        <div class="form-group row">
+            <div class="col-md-9 offset-md-3">
+                {{ form_widget(form.submit) }}
+                <a class="btn btn-danger" href="{{ path('home') }}" title="{{ __('Cancel') }}">{{ __('Cancel and logout') }}</a>
+            </div>
         </div>
         {{ form_end(form) }}
     </div>
