--- a/Resources/views/InlineLink/termsOfUse.html.twig
+++ b/Resources/views/InlineLink/termsOfUse.html.twig
@@ -2,4 +2,4 @@
 {% if policyUrl == '' %}
     {% set policyUrl = path('zikulalegalmodule_user_termsofuse') %}
 {% endif %}
-<a class="legal_inlinelink_termsofuse" href="{{ policyUrl|e('html_attr') }}" target="{{ target|e('html_attr') }}">{{ __('Terms of use') }}</a>
+<a class="legal_inlinelink_termsofuse" href="{{ policyUrl|e('html_attr') }}" target="{{ target|e('html_attr') }}">{% trans %}Terms of use{% endtrans %}</a>
