--- a/Resources/views/User/policyNotActive.html.twig
+++ b/Resources/views/User/policyNotActive.html.twig
@@ -1,2 +1,2 @@
-{{ moduleHeader('user', __('Policy not available'), '', true, true) }}
-<p>{{ __('The selected policy is not available.') }}</p>
+{{ moduleHeader('user', 'Policy not available'|trans, '', true, true) }}
+<p>{% trans %}The selected policy is not available.{% endtrans %}</p>
