--- a/Resources/views/Config/config.html.twig
+++ b/Resources/views/Config/config.html.twig
@@ -8,17 +8,17 @@
     <div class="row">
         <h3>
             <span class="fa fa-wrench"></span>
-            {{ __('Settings') }}
-            {{ pageSetVar('title', __('Legal settings')) }}
+            {% trans %}Settings{% endtrans %}
+            {{ pageSetVar('title', 'Legal settings'|trans) }}
         </h3>
 
-        <p class="alert alert-danger">{{ __('<strong>Important Usage Note</strong>: The provided legal statements are samples only. They need to be adapted to your specific needs and locales. You will find the content of the statements in files in the "/Resources/views/en" directory. These templates can be overridden by theme templates, or by global templates you would create in the "config/templates/ZikulaLegalModule/" directory (in the appropriate sub-directory for the language you are writing for).')|raw }}</p>
+        <p class="alert alert-danger"><strong>{% trans %}Important Usage Note{% endtrans %}</strong>: {% trans with {'%dir%': '"/Resources/views/en"', '%dir2%': '"config/templates/ZikulaLegalModule/"'} %}The provided legal statements are samples only. They need to be adapted to your specific needs and locales. You will find the content of the statements in files in the %dir% directory. These templates can be overridden by theme templates, or by global templates you would create in the %dir2% directory (in the appropriate sub-directory for the language you are writing for).{% endtrans %}</p>
 
         {{ form_start(form) }}
         {{ form_errors(form) }}
 
         <fieldset>
-            <legend>{{ __('Legal document types') }}</legend>
+            <legend>{% trans %}Legal document types{% endtrans %}</legend>
             {{ form_row(attribute(form, constant('Zikula\\LegalModule\\Constant::MODVAR_LEGALNOTICE_ACTIVE'))) }}
             {{ form_row(attribute(form, constant('Zikula\\LegalModule\\Constant::MODVAR_TERMS_ACTIVE'))) }}
             {{ form_row(attribute(form, constant('Zikula\\LegalModule\\Constant::MODVAR_PRIVACY_ACTIVE'))) }}
@@ -27,8 +27,8 @@
             {{ form_row(attribute(form, constant('Zikula\\LegalModule\\Constant::MODVAR_ACCESSIBILITY_ACTIVE'))) }}
         </fieldset>
         <fieldset>
-            <legend>{{ __('Custom urls') }}</legend>
-            <p>{{ __('The following fields allow to reference any custom url. As soon as an url is given it will be used instead of the normal Legal templates. So you can now use any page you want for displaying and managing your legal data.') }}</p>
+            <legend>{% trans %}Custom urls{% endtrans %}</legend>
+            <p>{% trans %}The following fields allow to reference any custom url. As soon as an url is given it will be used instead of the normal Legal templates. So you can now use any page you want for displaying and managing your legal data.{% endtrans %}</p>
             {{ form_row(attribute(form, constant('Zikula\\LegalModule\\Constant::MODVAR_LEGALNOTICE_URL'))) }}
             {{ form_row(attribute(form, constant('Zikula\\LegalModule\\Constant::MODVAR_TERMS_URL'))) }}
             {{ form_row(attribute(form, constant('Zikula\\LegalModule\\Constant::MODVAR_PRIVACY_URL'))) }}
@@ -37,11 +37,11 @@
             {{ form_row(attribute(form, constant('Zikula\\LegalModule\\Constant::MODVAR_ACCESSIBILITY_URL'))) }}
         </fieldset>
         <fieldset>
-            <legend>{{ __('Compliance') }}</legend>
+            <legend>{% trans %}Compliance{% endtrans %}</legend>
             {{ form_row(attribute(form, constant('Zikula\\LegalModule\\Constant::MODVAR_EUCOOKIE'))) }}
         </fieldset>
         <fieldset>
-            <legend>{{ __('Further settings') }}</legend>
+            <legend>{% trans %}Further settings{% endtrans %}</legend>
             {{ form_row(attribute(form, constant('Zikula\\LegalModule\\Constant::MODVAR_MINIMUM_AGE'))) }}
             {{ form_row(form.resetagreement) }}
         </fieldset>
