--- a/Resources/views/Include/acceptPolicies.html.twig
+++ b/Resources/views/Include/acceptPolicies.html.twig
@@ -1,12 +1,12 @@
 <div class="col-sm-offset-3 col-sm-9">
-    <p id="acceptpolicies_policies_info">{{ __('Please click on the following links to read the corresponding documents.', 'zikulalegalmodule') }}</p>
+    <p id="acceptpolicies_policies_info">{% trans %}Please click on the following links to read the corresponding documents.', 'zikulalegalmodule{% endtrans %}</p>
     <ul>
     {% if activePolicies.termsOfUse|default and not acceptedPolicies.termsOfUse|default %}
         {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_TERMS_URL')) %}
         {% if policyUrl == '' %}
             {% set policyUrl = path('zikulalegalmodule_user_termsofuse') %}
         {% endif %}
-        {% set policyName = __('Terms of use', 'zikulalegalmodule') %}
+        {% set policyName = 'Terms of use'|trans([], 'zikulalegalmodule') %}
         <li><a class="policy-link" data-toggle="modal" data-target="#modal-terms-of-use" href="{{ policyUrl }}">{{ policyName }}</a></li>
     {% endif %}
     {% if activePolicies.privacyPolicy|default and not acceptedPolicies.privacyPolicy|default %}
@@ -14,18 +14,18 @@
         {% if policyUrl == '' %}
             {% set policyUrl = path('zikulalegalmodule_user_privacypolicy') %}
         {% endif %}
-        {% set policyName = __('Privacy policy', 'zikulalegalmodule') %}
+        {% set policyName = 'Privacy policy'|trans([], 'zikulalegalmodule') %}
         <li><a class="policy-link" data-toggle="modal" data-target="#modal-privacy-policy" href="{{ policyUrl }}">{{ policyName }}</a></li>
     {% endif %}
     {% if activePolicies.agePolicy|default and not acceptedPolicies.agePolicy|default %}
-        <li>{{ __f('You need to be %s years of age or older, in accordance with our minimum age requirement.', { '%s': getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_MINIMUM_AGE'), 13) }, 'zikulalegalmodule') }}</li>
+        <li>{% trans with { '%s': getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_MINIMUM_AGE'), 13) } from 'zikulalegalmodule' %}You need to be %s years of age or older, in accordance with our minimum age requirement.{% endtrans %}</li>
     {% endif %}
     {% if activePolicies.tradeConditions|default and not acceptedPolicies.tradeConditions|default %}
         {% set policyUrl = getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_TRADECONDITIONS_URL')) %}
         {% if policyUrl == '' %}
             {% set policyUrl = path('zikulalegalmodule_user_tradeconditions') %}
         {% endif %}
-        {% set policyName = __('General terms and conditions of trade', 'zikulalegalmodule') %}
+        {% set policyName = 'General terms and conditions of trade'|trans([], 'zikulalegalmodule') %}
         <li><a class="policy-link" data-toggle="modal" data-target="#modal-general-terms-and-conditions-of-trade" href="{{ policyUrl }}">{{ policyName }}</a></li>
     {% endif %}
     {% if activePolicies.cancellationRightPolicy|default and not acceptedPolicies.cancellationRightPolicy|default %}
@@ -33,7 +33,7 @@
         {% if policyUrl == '' %}
             {% set policyUrl = path('zikulalegalmodule_user_cancellationrightpolicy') %}
         {% endif %}
-        {% set policyName = __('Cancellation right policy', 'zikulalegalmodule') %}
+        {% set policyName = 'Cancellation right policy'|trans([], 'zikulalegalmodule') %}
         <li><a class="policy-link" data-toggle="modal" data-target="#modal-cancellation-right-policy" href="{{ policyUrl }}">{{ policyName }}</a></li>
     {% endif %}
     </ul>
@@ -47,7 +47,7 @@
             </div>
             <div class="modal-body" id="modal-policy-body"><i class="fa fa-spin fa-cog fa-2x"></i></div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">{{ __('Close') }}</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">{% trans %}Close{% endtrans %}</button>
             </div>
         </div>
     </div>
