--- a/Resources/views/InlineLink/legalNotice.html.twig
+++ b/Resources/views/InlineLink/legalNotice.html.twig
@@ -2,4 +2,4 @@
 {% if policyUrl == '' %}
     {% set policyUrl = path('zikulalegalmodule_user_legalnotice') %}
 {% endif %}
-<a class="legal_inlinelink_legalnotice" href="{{ policyUrl|e('html_attr') }}" target="{{ target|e('html_attr') }}">{{ __('Legal notice') }}</a>
+<a class="legal_inlinelink_legalnotice" href="{{ policyUrl|e('html_attr') }}" target="{{ target|e('html_attr') }}">{% trans %}Legal notice{% endtrans %}</a>
