--- a/Resources/views/InlineLink/tradeConditions.html.twig
+++ b/Resources/views/InlineLink/tradeConditions.html.twig
@@ -2,4 +2,4 @@
 {% if policyUrl == '' %}
     {% set policyUrl = path('zikulalegalmodule_user_tradeconditions') %}
 {% endif %}
-<a class="legal_inlinelink_tradeconditions" href="{{ policyUrl|e('html_attr') }}" target="{{ target|e('html_attr') }}">{{ __('General terms and conditions of trade') }}</a>
+<a class="legal_inlinelink_tradeconditions" href="{{ policyUrl|e('html_attr') }}" target="{{ target|e('html_attr') }}">{% trans %}General terms and conditions of trade{% endtrans %}</a>
