--- a/Resources/views/User/acceptPolicies.html.twig
+++ b/Resources/views/User/acceptPolicies.html.twig
@@ -3,16 +3,16 @@
     '@ZikulaFormExtension/Form/form_div_layout.html.twig'
 ] %}
 
-{% set templateTitle = __('Site policies') %}
+{% set templateTitle = 'Site policies'|trans %}
 {{ pageSetVar('title', templateTitle) }}
 <h2>{{ templateTitle }}</h2>
 {{ showflashes() }}
 
 {% if login %}
     <div class="alert alert-danger">
-        {{ __('In order to log in you must accept this site\'s policies. If you have accepted the site\'s policies in the past, then they have been updated and we ask that you review the changes.') }}
+        {% trans %}In order to log in you must accept this site\'s policies. If you have accepted the site\'s policies in the past, then they have been updated and we ask that you review the changes.{% endtrans %}
         <hr />
-        {{ __('If you leave this page without successfully accepting the policies, then you will not be logged in.') }}
+        {% trans %}If you leave this page without successfully accepting the policies, then you will not be logged in.{% endtrans %}
     </div>
 {% endif %}
 
@@ -26,7 +26,7 @@
         </fieldset>
         <div class="col-sm-offset-3 col-sm-9">
             {{ form_widget(form.submit) }}
-            <a class="btn btn-danger" href="{{ path('home') }}" title="{{ __('Cancel') }}">{{ __('Cancel and logout') }}</a>
+            <a class="btn btn-danger" href="{{ path('home') }}" title="{% trans %}Cancel{% endtrans %}">{% trans %}Cancel and logout{% endtrans %}</a>
         </div>
         {{ form_end(form) }}
     </div>
