--- a/Resources/views/User/cancellationRightPolicy.html.twig
+++ b/Resources/views/User/cancellationRightPolicy.html.twig
@@ -1,2 +1,2 @@
-{{ moduleHeader('user', __f('Cancellation right policy for %s', { '%s': pagevars.title }), '', true, true) }}
+{{ moduleHeader('user', 'Cancellation right policy for %s'|trans({ '%s': pagevars.title }), '', true, true) }}
 {{ include('@ZikulaLegalModule/' ~ app.request.locale ~ '/cancellationRightPolicy.html.twig') }}
