globally change `fa fa-` to `fas fa-`

--- a/Resources/views/Include/acceptPolicies.html.twig
+++ b/Resources/views/Include/acceptPolicies.html.twig
@@ -47,7 +47,7 @@
                 <h5 class="modal-title" id="modal-policy-title"></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             </div>
-            <div class="modal-body" id="modal-policy-body"><i class="fa fa-spin fa-cog fa-2x"></i></div>
+            <div class="modal-body" id="modal-policy-body"><i class="fas fa-spin fa-cog fa-2x"></i></div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">{% trans %}Close{% endtrans %}</button>
             </div>
