--- a/Resources/views/UsersUI/edit.html.twig
+++ b/Resources/views/UsersUI/edit.html.twig
@@ -148,7 +148,7 @@
             </div>
             <div class="modal-body" id="modal-policy-body"><i class="fas fa-spin fa-cog fa-2x"></i></div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">{% trans %}Close{% endtrans %}</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">{% trans %}Close{% endtrans %}</button>
             </div>
         </div>
     </div>
