use getSystemVar function

--- a/Resources/views/en/termsOfUse.html.twig
+++ b/Resources/views/en/termsOfUse.html.twig
@@ -25,7 +25,7 @@
 </p>
 <h2>6. Your conduct</h2>
 <p>
-    You agree that all information or data of any kind, whether text, software, code, music or audio, photographs or graphics, video or animations, or other materials ('content'), made available publicly or privately, will be under the sole responsibility of the person providing the said content, or of the person whose user account is used. You agree that this site might expose you to content that may be objectionable or offensive. The site operator will not be responsible to you in any way for content provided on this site, nor for any error or omission. However, if you do see content on this site that you feel is offensive or inappropriate, please <a href="mailto:{{ getModVar('ZConfig', 'adminmail')|e('html_attr')|protectMail() }}" title="Send mail to the site administrator">e-mail the site administrator</a>.
+    You agree that all information or data of any kind, whether text, software, code, music or audio, photographs or graphics, video or animations, or other materials ('content'), made available publicly or privately, will be under the sole responsibility of the person providing the said content, or of the person whose user account is used. You agree that this site might expose you to content that may be objectionable or offensive. The site operator will not be responsible to you in any way for content provided on this site, nor for any error or omission. However, if you do see content on this site that you feel is offensive or inappropriate, please <a href="mailto:{{ getSystemVar('adminmail')|e('html_attr')|protectMail() }}" title="Send mail to the site administrator">e-mail the site administrator</a>.
 </p>
 <p>
     By using this site or any service provided, you explicitly agree to the following clauses:
@@ -68,7 +68,7 @@
     Failure to comply with any of the clauses of this section 6 of these 'Terms of use' will be considered to be just cause for immediate closure of your user account, and may render you liable to legal action. For more information about user account closure, please refer to the site's {{ zikulalegalmodule_inlineLink('privacyPolicy') }}.
 </p>
 <p>
-    If you become aware of any infringement of these 'Terms of use' by a registered user of this site, please <a href="mailto:{{ getModVar('ZConfig', 'adminmail')|e('html_attr')|protectMail() }}" title="Send mail to the site administrator">e-mail the site administrator</a>.
+    If you become aware of any infringement of these 'Terms of use' by a registered user of this site, please <a href="mailto:{{ getSystemVar('adminmail')|e('html_attr')|protectMail() }}" title="Send mail to the site administrator">e-mail the site administrator</a>.
 </p>
 
 <h2>7. Submission of content on this site</h2>
@@ -122,7 +122,7 @@
     If you believe that your property has been used in any way that could be considered a copyright infringement or a violation of your intellectual property rights, the site operator's copyright agent can be contacted via:
 </p>
 <ul>
-    <li><a href="mailto:{{ getModVar('ZConfig', 'adminmail')|e('html_attr')|protectMail() }}" title="Send mail to the site administrator">E-mail to the site administrator</a>.</li>
+    <li><a href="mailto:{{ getSystemVar('adminmail')|e('html_attr')|protectMail() }}" title="Send mail to the site administrator">E-mail to the site administrator</a>.</li>
 </ul>
 
 <!-- **NOTE: You are supposed to provide a name and mailing address -->
