--- a/Resources/views/User/termsOfUse.html.twig
+++ b/Resources/views/User/termsOfUse.html.twig
@@ -1,2 +1,2 @@
-{{ moduleHeader('user', 'Terms of use for %s'|trans({ '%s': pagevars.title }), '', true, true) }}
+{{ moduleHeader('user', 'Terms of use for %s%'|trans({ '%s%': pagevars.title }), '', true, true) }}
 {{ include('@ZikulaLegalModule/' ~ app.request.locale ~ '/termsOfUse.html.twig') }}
