--- a/Resources/views/User/tradeConditions.html.twig
+++ b/Resources/views/User/tradeConditions.html.twig
@@ -1,2 +1,2 @@
-{{ moduleHeader('user', 'Trade conditions for %s'|trans({ '%s': pagevars.title }), '', true, true) }}
+{{ moduleHeader('user', 'Trade conditions for %s%'|trans({ '%s%': pagevars.title }), '', true, true) }}
 {{ include('@ZikulaLegalModule/' ~ app.request.locale ~ '/tradeConditions.html.twig') }}
