--- a/Resources/views/UsersUI/edit.html.twig
+++ b/Resources/views/UsersUI/edit.html.twig
@@ -16,7 +16,7 @@
             {% if editablePolicies.termsOfUse %}
                 <div class="custom-control custom-radio">
                     <input type="radio" id="acceptpolicies_termsofuse_yes" name="acceptedpolicies_termsofuse" required="required"{% if acceptedPolicies.termsOfUse %} checked="checked"{% endif %} value="1" class="custom-control-input" />
-                    <label for="acceptpolicies_termsofuse_yes">{{ '%s accepted.'|trans({ '%s': policyLink })|safeHtml }}</label>
+                    <label for="acceptpolicies_termsofuse_yes">{{ '%s% accepted.'|trans({ '%s%': policyLink })|safeHtml }}</label>
                 </div>
                 <div class="custom-control custom-radio">
                     <input type="radio" id="acceptpolicies_termsofuse_no" name="acceptedpolicies_termsofuse" required="required"{% if not acceptedPolicies.termsOfUse %} checked="checked"{% endif %} value="0" class="custom-control-input" />
@@ -44,7 +44,7 @@
             {% if editablePolicies.privacyPolicy %}
                 <div class="custom-control custom-radio">
                     <input type="radio" id="acceptpolicies_privacypolicy_yes" name="acceptedpolicies_privacypolicy" required="required"{% if acceptedPolicies.privacyPolicy %} checked="checked"{% endif %} value="1" class="custom-control-input" />
-                    <label class="custom-control-label" for="acceptpolicies_privacypolicy_yes">{{ '%s accepted.'|trans({ '%s': policyLink })|safeHtml }}</label>
+                    <label class="custom-control-label" for="acceptpolicies_privacypolicy_yes">{{ '%s% accepted.'|trans({ '%s%': policyLink })|safeHtml }}</label>
                 </div>
                 <div class="custom-control custom-radio">
                     <input type="radio" id="acceptpolicies_privacypolicy_no" name="acceptedpolicies_privacypolicy" required="required"{% if not acceptedPolicies.privacyPolicy %} checked="checked"{% endif %} value="0" class="custom-control-input" />
@@ -66,7 +66,7 @@
             {% if editablePolicies.agePolicy %}
                 <div class="custom-control custom-radio">
                     <input type="radio" id="acceptpolicies_agepolicy_yes" name="acceptedpolicies_agepolicy" required="required"{% if acceptedPolicies.agePolicy %} checked="checked"{% endif %} value="1" class="custom-control-input" />
-                    <label class="custom-control-label" for="acceptpolicies_agepolicy_yes">{% trans with { '%s': getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_MINIMUM_AGE'), 13) } %}Confirmed minimum age requirement (%s years of age) met.{% endtrans %}</label>
+                    <label class="custom-control-label" for="acceptpolicies_agepolicy_yes">{% trans with { '%s%': getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_MINIMUM_AGE'), 13) } %}Confirmed minimum age requirement (%s% years of age) met.{% endtrans %}</label>
                 </div>
                 <div class="custom-control custom-radio">
                     <input type="radio" id="acceptpolicies_agepolicy_no" name="acceptedpolicies_agepolicy" required="required"{% if not acceptedPolicies.agePolicy %} checked="checked"{% endif %} value="0" class="custom-control-input" />
@@ -76,7 +76,7 @@
                     {{ fieldErrors.agepolicy|default }}
                 </p>
             {% else %}
-                <span class="form-control-static">{{ acceptedPolicies.agePolicy ? 'Confirmed minimum age requirement (%s years of age) met.'|trans({ '%s': getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_MINIMUM_AGE'), 13) }) : 'Minimum age requirement not confirmed.'|trans }}</span>
+                <span class="form-control-static">{{ acceptedPolicies.agePolicy ? 'Confirmed minimum age requirement (%s% years of age) met.'|trans({ '%s%': getModVar(constant('Zikula\\LegalModule\\Constant::MODNAME'), constant('Zikula\\LegalModule\\Constant::MODVAR_MINIMUM_AGE'), 13) }) : 'Minimum age requirement not confirmed.'|trans }}</span>
             {% endif %}
             </div>
         </div>
@@ -94,7 +94,7 @@
             {% if editablePolicies.tradeConditions %}
                 <div class="custom-control custom-radio">
                     <input type="radio" id="acceptpolicies_tradeconditions_yes" name="acceptedpolicies_tradeconditions" required="required"{% if acceptedPolicies.tradeConditions %} checked="checked"{% endif %} value="1" class="custom-control-input" />
-                    <label class="custom-control-label" for="acceptpolicies_tradeconditions_yes">{{ '%s accepted.'|trans({ '%s': policyLink })|safeHtml }}</label>
+                    <label class="custom-control-label" for="acceptpolicies_tradeconditions_yes">{{ '%s% accepted.'|trans({ '%s%': policyLink })|safeHtml }}</label>
                 </div>
                 <div class="custom-control custom-radio">
                     <input type="radio" id="acceptpolicies_tradeconditions_no" name="acceptedpolicies_tradeconditions" required="required"{% if not acceptedPolicies.tradeConditions %} checked="checked"{% endif %} value="0" class="custom-control-input" />
@@ -122,7 +122,7 @@
             {% if editablePolicies.cancellationRightPolicy %}
                 <div class="custom-control custom-radio">
                     <input type="radio" id="acceptpolicies_cancellationrightpolicy_yes" name="acceptedpolicies_cancellationrightpolicy" required="required"{% if acceptedPolicies.cancellationRightPolicy %} checked="checked"{% endif %} value="1" class="custom-control-input" />
-                    <label class="custom-control-label" for="acceptpolicies_cancellationrightpolicy_yes">{{ '%s accepted.'|trans({ '%s': policyLink })|safeHtml }}</label>
+                    <label class="custom-control-label" for="acceptpolicies_cancellationrightpolicy_yes">{{ '%s% accepted.'|trans({ '%s%': policyLink })|safeHtml }}</label>
                 </div>
                 <div class="custom-control custom-radio">
                     <input type="radio" id="acceptpolicies_cancellationrightpolicy_no" name="acceptedpolicies_cancellationrightpolicy" required="required"{% if not acceptedPolicies.cancellationRightPolicy %} checked="checked"{% endif %} value="0" class="custom-control-input" />
