--- a/Resources/views/en/legalNotice.html.twig
+++ b/Resources/views/en/legalNotice.html.twig
@@ -1,1 +1,1 @@
-<p>{{ 'Enter your text by overriding the <em>%s</em> template file.'|trans({ '%s': 'modules/zikula/legal-module/Resources/views/en/legalNotice.html.twig' })|raw }}</p>
+<p>{{ 'Enter your text by overriding the <em>%s%</em> template file.'|trans({ '%s%': 'modules/zikula/legal-module/Resources/views/en/legalNotice.html.twig' })|raw }}</p>
