--- a/Resources/views/User/cancellationRightPolicy.html.twig
+++ b/Resources/views/User/cancellationRightPolicy.html.twig
@@ -1,2 +1,2 @@
-{{ moduleHeader('user', 'Cancellation right policy for %s%'|trans({ '%s%': pagevars.title }), '', true, true) }}
+{{ moduleHeader('user', 'Cancellation right policy for %s%'|trans({ '%s%': siteName() }), '', true, true) }}
 {{ include('@ZikulaLegalModule/' ~ app.request.locale ~ '/cancellationRightPolicy.html.twig') }}
